[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/Menus/Shop.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Fonts/Bit.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Theme/Main.tres" type="Theme" id=3]
[ext_resource path="res://Assets/UI/Fonts/BitSmall.tres" type="DynamicFont" id=4]

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="BackButton" type="Button" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 220.0
margin_bottom = 100.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 2 )
text = "Equipment Shop"
align = 1

[node name="PlayerMoney" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -300.0
margin_top = 30.0
text = "[PlayerMoney]"

[node name="EquipmentUpgradesScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -227.5
margin_top = 100.0
margin_right = 272.5
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false
scroll_deadzone = 50

[node name="ContainerContainer" type="VBoxContainer" parent="EquipmentUpgradesScrollContainer"]
margin_right = 455.0
margin_bottom = 161.0
rect_min_size = Vector2( 455, 0 )
custom_constants/separation = 50

[node name="EquipmentSort" type="Label" parent="EquipmentUpgradesScrollContainer/ContainerContainer"]
margin_right = 455.0
margin_bottom = 35.0
text = "Location Equipment"
align = 1

[node name="UpgradeContainer" type="VBoxContainer" parent="EquipmentUpgradesScrollContainer/ContainerContainer"]
visible = false
margin_top = 85.0
margin_right = 458.0
margin_bottom = 161.0

[node name="UpgradeTemplate" type="HBoxContainer" parent="EquipmentUpgradesScrollContainer/ContainerContainer/UpgradeContainer"]
margin_right = 458.0
margin_bottom = 37.0
custom_constants/separation = 50

[node name="UpgradeName" type="Label" parent="EquipmentUpgradesScrollContainer/ContainerContainer/UpgradeContainer/UpgradeTemplate"]
margin_top = 1.0
margin_right = 73.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "[Name]"

[node name="UpgradeLevel" type="Label" parent="EquipmentUpgradesScrollContainer/ContainerContainer/UpgradeContainer/UpgradeTemplate"]
margin_left = 123.0
margin_top = 1.0
margin_right = 208.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "[level]"

[node name="Button" type="Button" parent="EquipmentUpgradesScrollContainer/ContainerContainer/UpgradeContainer/UpgradeTemplate"]
margin_left = 258.0
margin_right = 458.0
margin_bottom = 37.0
rect_min_size = Vector2( 200, 0 )
text = "[costs]"

[node name="UpgradeText" type="Label" parent="EquipmentUpgradesScrollContainer/ContainerContainer/UpgradeContainer"]
margin_top = 41.0
margin_right = 458.0
margin_bottom = 76.0
text = "[What does upgrade do?] "
autowrap = true

[node name="SaltUpgrade" type="VBoxContainer" parent="EquipmentUpgradesScrollContainer/ContainerContainer"]
margin_top = 85.0
margin_right = 455.0
margin_bottom = 161.0

[node name="UpgradeTemplate" type="HBoxContainer" parent="EquipmentUpgradesScrollContainer/ContainerContainer/SaltUpgrade"]
margin_right = 455.0
margin_bottom = 37.0
custom_constants/separation = 50

[node name="UpgradeName" type="Label" parent="EquipmentUpgradesScrollContainer/ContainerContainer/SaltUpgrade/UpgradeTemplate"]
margin_top = 1.0
margin_right = 95.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Salt Can"

[node name="UpgradeLevel" type="Label" parent="EquipmentUpgradesScrollContainer/ContainerContainer/SaltUpgrade/UpgradeTemplate"]
margin_left = 145.0
margin_top = 1.0
margin_right = 205.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 4 )
text = "Lvl 1"

[node name="SaltButton" type="Button" parent="EquipmentUpgradesScrollContainer/ContainerContainer/SaltUpgrade/UpgradeTemplate"]
margin_left = 255.0
margin_right = 455.0
margin_bottom = 37.0
rect_min_size = Vector2( 200, 0 )
text = " 0$"

[node name="UpgradeText" type="Label" parent="EquipmentUpgradesScrollContainer/ContainerContainer/SaltUpgrade"]
margin_top = 41.0
margin_right = 455.0
margin_bottom = 76.0
text = "[What does upgrade do?] "
autowrap = true

[connection signal="pressed" from="BackButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="EquipmentUpgradesScrollContainer/ContainerContainer/SaltUpgrade/UpgradeTemplate/SaltButton" to="." method="_on_SaltButton_pressed"]
